dev: Changed comments to be loaded newest first, added logic and endpoint to get all posts or get all of a user’s posts, including a check if the current user liked those posts, and fixed a couple tests which failed because I changed the method used in the loadUserByUsername method of the UserService.